# Covian-Backend

./: .env.example  Dockerfile  README.md  alembic.ini  corevita_api_integration_guide.md  debug_beanie.py  debug_beanie2.py  debug_beanie3.py  debug_beanie4.py  debug_err.py  debug_err2.py  docker-compose.yml  fix_admin_pwd.py  fix_everything.py  fix_routes.py  fix_schemas.py  list_users.py  migrate_db.py  pyproject.toml  pytest_out.txt  test_beanie.py  test_fastapi.py  test_jobs.py  test_login.py  test_verify.py
.github/workflows/: docker-build-push.yml
app/: main.py  worker.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  auth.py  billing.py  candidate.py  cms.py  company.py  content.py  crm.py  health.py  job.py  upload.py  user.py
app/core/: config.py  security.py
app/db/: base.py  base_class.py  mongo.py  seed.py  session.py
app/db/models/: user.py
app/models/: activity_log.py  application.py  audit_log.py  candidate.py  candidate_timeline.py  caregiver_enquiry.py  client_logo.py  cms.py  company.py  enquiry.py  invoice.py  job.py  lead.py  news.py  notification.py  payment.py  role.py  team_member.py  testimonial.py  user.py  workflow.py
app/repositories/: user_repo.py
app/schemas/: platform.py  user.py
app/services/: user_service.py
app/utils/: activity.py  audit.py  background.py  timeline.py  workflow_engine.py
migrations/: env.py
tests/: conftest.py  test_auth.py
