[project]
name = "corevita-advisory-backend"
version = "0.1.0"
description = "Production-ready async MongoDB backend service for CoreVita Advisory Private Limited."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "motor>=3.3.0",
    "redis>=5.0.3",
    "arq>=0.26.0",
    "pydantic-settings>=2.2.1",
    "pydantic>=2.6.4",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.5",
    "python-multipart>=0.0.9",
    "email-validator>=2.0.0",
    "beanie>=1.25,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]
